--- a/index.html
+++ b/index.html
@@ -41,15 +41,10 @@
     <section id="skills">
         <h2>Skills</h2>
         <ul>
-            <li>React</li>
-            <li>Mern</li>
-            <li>Cloud Computing</li>
-            <li>Python</li>
-            <li>Spring</li>
-            <li>ML & AI</li>
-            <li>java</li>
-            <li>c++</li>
-            <li>Java script</li>
+            <li>Frontend Development</li>
+            <li>Backend development</li>
+            <li> Database Management</li>
+            <li>Version Control & Deployment</li>
         </ul>
     </section>
 
