--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <h2>Contact</h2>
         <p>Email: <a href="mailto:sushmithav@srmasc.ac.in"></a>sushmithav@srmasc.ac.in</p>
         <p>Phone: <a href="tel:+91 90259 63122">9025963122</a></p>
-        <p>Resume: <a href=>Download</a></p>
+        <p>Resume: <a href="file:///C:/Users/user/Downloads/My%20resume.pdf">Download</a></p>
     </section>
 
     <footer>
